Documentation, function renaming, code cleanup.
batch.c
        shortened function names
        fixed initialization check

batch.h
        Added function descriptions

main.c
        Changed function calls to new names

Other
        Added batchlib to FIRESTARTER project.

Note:  libbatch will be migrating to Variorum.  This is not a
proposal for a change to upstream FIRESTARTER.

--- a/source_files/Makefile
+++ b/source_files/Makefile
@@ -28,7 +28,7 @@ LINUX_CC?=gcc
 LINUX_C_FLAGS=-fomit-frame-pointer -Wall -std=gnu99 -I. -DAFFINITY
 OPT_STD=-O2
 OPT_ASM=-O0
-LINUX_L_FLAGS=-lpthread -lm
+LINUX_L_FLAGS=-L./batchlib -Wl,-rpath=./batchlib -lpthread -lm -lbatch
 LINUX_L_FLAGS_STATIC =
 $STATIC LINUX_L_FLAGS_STATIC = -static
 
